--- a/configs/movielen_base.yaml
+++ b/configs/movielen_base.yaml
@@ -18,7 +18,11 @@ critic_lr: 0.001
 # MDP params
 discount_factor: 0.9
 replay_memory_size: 1000000
+eps_priority: 1e-6
+eps: 1.0
 
 # Training Settings
 tau: 0.001
 batch_size: 32
+
+
