--- a/configs/movielen_base.yaml
+++ b/configs/movielen_base.yaml
@@ -20,6 +20,8 @@ discount_factor: 0.9
 replay_memory_size: 1000000
 eps_priority: 1e-6
 eps: 1.0
+eps_decay: 0.000001
+std: 0.001
 
 # Training Settings
 tau: 0.001
