--- a/configs/ayampp_small_base_infer.yaml
+++ b/configs/ayampp_small_base_infer.yaml
@@ -49,3 +49,9 @@ tau: 0.001
 batch_size: 8
 M: 20
 workspace: data/test_data/ayampp_checkpoint/
+
+
+# Evaluation settings
+test_ratio: 0.2
+show_evaluation: 10
+
