--- a/configs/ayampp_full_eval.yaml
+++ b/configs/ayampp_full_eval.yaml
@@ -1,14 +1,14 @@
-eval: False
-input_data: data/ayampp_cleaned_split/train/
+eval: True
+input_data: data/ayampp_cleaned_split/test/
 device: cpu
-mlflow_port: 8080
+mlflow_port: 8088
 
 # Env settings
-state_size: 5
+state_size: 3
 topk: 10
 
 # recommend 5 times
-done_count: 1000
+done_count: 50
 # embedding settings
 user_embedding:
   name: pretrained
@@ -27,7 +27,7 @@ drr:
 
 actor:
   hidden_dim : 64
-  lr: 0.001
+  lr: 0.0001
   step_size: 500
 
 # critic config
@@ -35,7 +35,7 @@ critic:
   embedding_dim: 64
   hidden_dim: 32
   step_size: 500
-  lr: 0.001
+  lr: 0.0001
 
 # MDP params
 discount_factor: 0.9
@@ -48,5 +48,5 @@ std: 1.5
 # Training Settings
 tau: 0.001
 batch_size: 8
-M: 20000
-workspace: workspace/ayampp_full_1
+M: 100
+workspace: checkpoints/ayampp_full_1
